Add Vercel config and routing

--- a/complete.html
+++ b/complete.html
@@ -483,7 +483,7 @@
     <div class="left-text-container">
       <h1>Wildfire & Environmental Change Prediction</h1>
       <p>Monitor wildfire spots, deforestation, and ice melting in real-time.</p>
-      <a href="wild_fire2.html" class="btn">Let's Track</a>
+      <a href="/predict" class="btn">Let's Track</a>
     </div>
   
     <!-- Image Containers and Videos -->
