--- a/wild_fire2.html
+++ b/wild_fire2.html
@@ -304,7 +304,7 @@
             // Prediction functionality
             async function handlePrediction(location) {
                 try {
-                    const response = await fetch('https://wildfire-backend-623265456897.us-central1.run.app', {
+                    const response = await fetch('https://wildfire-backend-623265456897.us-central1.run.app/predict', {
                         method: 'POST',
                         headers: {'Content-Type': 'application/json'},
                         body: JSON.stringify({ location: location })
